--- a/dev/scss/sections/_contact-content.scss
+++ b/dev/scss/sections/_contact-content.scss
@@ -36,17 +36,31 @@
     background-color: $pale-cream;
 
     background-image: url('../img/Contact/platecontact.png');
-        background-position-x: center;
-        background-repeat: no-repeat;
-        // margin-top: 60px;
-        @include md{
-            background-position-x: 300px;
-        }
+    background-position-x: center;
+    background-position-y: 100px;
+    background-repeat: no-repeat;
+
+    padding: 100px 0px 230px 0px;
+
+    @include md {
+        background-position-x: 300px;
+        padding: 100px 0px 190px 0px;
+    }
 
     @include lg {
         display: grid;
-        grid-template-columns: auto 60% auto;
+        grid-template-columns: auto 50% auto;
         grid-template-areas: ". form .";
+        padding: 300px 0px 0px 0px;
+        background-size: 70%;
+        background-position-y: center;
+        background-position-x: center;
+        // height
+    }
+
+    @include xl{
+        grid-template-columns: auto 600px auto;
+        background-size: 800px;
     }
 
     >div {
@@ -66,15 +80,27 @@
 
             @include md {
                 height: 300px;
+                padding-bottom: 50px;
             }
 
             @include lg {
                 height: 400px;
+                padding-top: 50px;
             }
 
             #button-container {
                 position: relative;
                 transition: 0.5s;
+
+
+                @include md {
+                    padding-left: 100px;
+                }
+
+                @include lg {
+                    padding-left: 0px;
+                }
+
 
                 &:hover {
                     #contact-options {
@@ -105,6 +131,7 @@
                     @include md {
                         top: -25%;
                         left: 90%;
+
                     }
 
                     a:link,
@@ -166,22 +193,19 @@
             grid-area: form;
         }
 
-        
-
-        // @include md{ 
-        //     display: grid;
-        //     grid-template-columns: 1fr 1fr;
-        //     grid-template-areas: ". plate";
-        // }
-
         #form-container {
-            display: none; 
+            display: none;
 
             padding: 40px 20px 0px 20px;
 
             @include md {
                 padding: 150px 40px 0px 40px;
             }
+
+            @include lg {
+                padding: 30px 40px 0px 40px;
+            }
+
 
 
 
@@ -232,6 +256,10 @@
 
                         @include md {
                             height: 300px;
+                        }
+
+                        @include lg {
+                            height: 250px;
                         }
                     }
                 }
